sys/src/functions.rs


    pub fn GEOSEnvelope(g: *const GEOSGeometry) -> *mut GEOSGeometry;
    pub fn GEOSIntersection(g1: *const GEOSGeometry, g2: *const GEOSGeometry) -> *mut GEOSGeometry;
    pub fn GEOSConvexHull(g: *const GEOSGeometry) -> *mut GEOSGeometry;
    pub fn GEOSBoundary(g: *const GEOSGeometry) -> *mut GEOSGeometry;
    pub fn GEOSGetCentroid(g: *const GEOSGeometry) -> *mut GEOSGeometry;
    pub fn GEOSSymDifference(
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
    ) -> *mut GEOSGeometry;
    pub fn GEOSDifference(g1: *const GEOSGeometry, g2: *const GEOSGeometry) -> *mut GEOSGeometry;
    pub fn GEOSUnion(g1: *const GEOSGeometry, g2: *const GEOSGeometry) -> *mut GEOSGeometry;
    pub fn GEOSUnaryUnion(g: *const GEOSGeometry) -> *mut GEOSGeometry;
    pub fn GEOSClipByRect(
        g: *const GEOSGeometry,
        xmin: c_double,
        ymin: c_double,
        xmax: c_double,
        ymax: c_double,
    ) -> *mut GEOSGeometry;
    pub fn GEOSSnap(
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        tolerance: c_double,
    ) -> *mut GEOSGeometry;
    pub fn GEOSGeom_extractUniquePoints(g: *const GEOSGeometry) -> *mut GEOSGeometry;
    pub fn GEOSVoronoiDiagram(
        g: *const GEOSGeometry,
        env: *const GEOSGeometry,
        tolerance: c_double,
        onlyEdges: c_int,
    ) -> *mut GEOSGeometry;
    pub fn GEOSNormalize(g: *mut GEOSGeometry) -> c_int;
    #[cfg(feature = "v3_8_0")]
    pub fn GEOSBuildArea(g: *const GEOSGeometry) -> *mut GEOSGeometry;
    pub fn GEOSLineMerge(g: *const GEOSGeometry) -> *mut GEOSGeometry;
    #[cfg(feature = "v3_7_0")]
    pub fn GEOSReverse(g: *const GEOSGeometry) -> *mut GEOSGeometry;
    pub fn GEOSSimplify(g: *const GEOSGeometry, tolerance: c_double) -> *mut GEOSGeometry;
    pub fn GEOSTopologyPreserveSimplify(
        g: *const GEOSGeometry,
        tolerance: c_double,
    ) -> *mut GEOSGeometry;
    #[cfg(feature = "v3_8_0")]
    pub fn GEOSMakeValid(g: *const GEOSGeometry) -> *mut GEOSGeometry;
    pub fn GEOSGetNumGeometries(g: *const GEOSGeometry) -> c_int;
    pub fn GEOSGeomType(g: *const GEOSGeometry) -> *mut c_char;
    pub fn GEOSGetSRID(g: *const GEOSGeometry) -> c_int;
    pub fn GEOSSetSRID(g: *mut GEOSGeometry, srid: c_int);
    #[cfg(feature = "v3_7_0")]
    pub fn GEOSSegmentIntersection(
        ax0: c_double,
        ay0: c_double,
        ax1: c_double,
        ay1: c_double,
        bx0: c_double,
        by0: c_double,
        bx1: c_double,
        by1: c_double,
        cx: *mut c_double,
        cy: *mut c_double,
    ) -> c_int;
    pub fn GEOSDelaunayTriangulation(
        g: *const GEOSGeometry,
        tolerance: c_double,
        onlyEdges: c_int,
    ) -> *mut GEOSGeometry;

    // Functions acting on GEOSPreparedGeometry:
    pub fn GEOSPreparedContains(
        pg1: *const GEOSPreparedGeometry,
        g2: *const GEOSGeometry,
    ) -> c_char;
    pub fn GEOSPreparedContainsProperly(
        pg1: *const GEOSPreparedGeometry,
        g2: *const GEOSGeometry,
    ) -> c_char;
    pub fn GEOSPreparedCoveredBy(
        pg1: *const GEOSPreparedGeometry,
        g2: *const GEOSGeometry,
    ) -> c_char;
    pub fn GEOSPreparedCovers(
        pg1: *const GEOSPreparedGeometry,
        g2: *const GEOSGeometry,
    ) -> c_char;
    pub fn GEOSPreparedCrosses(
        pg1: *const GEOSPreparedGeometry,
        g2: *const GEOSGeometry,
    ) -> c_char;
    pub fn GEOSPreparedDisjoint(
        pg1: *const GEOSPreparedGeometry,
        g2: *const GEOSGeometry,
    ) -> c_char;
    pub fn GEOSPreparedIntersects(
        pg1: *const GEOSPreparedGeometry,
        g2: *const GEOSGeometry,
    ) -> c_char;
    pub fn GEOSPreparedOverlaps(
        pg1: *const GEOSPreparedGeometry,
        g2: *const GEOSGeometry,
    ) -> c_char;
    pub fn GEOSPreparedTouches(pg1: *const GEOSPreparedGeometry, g2: *const GEOSGeometry) -> c_char;
    pub fn GEOSPreparedWithin(pg1: *const GEOSPreparedGeometry, g2: *const GEOSGeometry) -> c_char;
    pub fn GEOSPreparedGeom_destroy(g: *const GEOSPreparedGeometry);
    pub fn GEOSGetInteriorRingN(g: *const GEOSGeometry, n: c_int) -> *const GEOSGeometry;
    pub fn GEOSGetExteriorRing(g: *const GEOSGeometry) -> *const GEOSGeometry;
    pub fn GEOSGetNumInteriorRings(g: *const GEOSGeometry) -> c_int;
    pub fn GEOSGeomGetNumPoints(g: *const GEOSGeometry) -> c_int;
    pub fn GEOSGetNumCoordinates(g: *const GEOSGeometry) -> c_int;
    pub fn GEOSGeom_getDimensions(g: *const GEOSGeometry) -> c_int;
    pub fn GEOSGeom_getCoordinateDimension(g: *const GEOSGeometry) -> c_int;
    #[cfg(feature = "v3_7_0")]
    pub fn GEOSCoordSeq_isCCW(s: *const GEOSCoordSequence, is_ccw: *mut c_char) -> c_int;
    #[cfg(feature = "v3_6_0")]
    pub fn GEOSGeom_getPrecision(g: *const GEOSGeometry) -> c_double;
    #[cfg(feature = "v3_6_0")]
    pub fn GEOSGeom_setPrecision(
        g: *const GEOSGeometry,
        grid_size: c_double,
        flags: c_int,
    ) -> *mut GEOSGeometry;
    #[cfg(feature = "v3_7_0")]
    pub fn GEOSGeom_getXMax(g: *const GEOSGeometry, value: *mut c_double) -> c_int;
    #[cfg(feature = "v3_7_0")]
    pub fn GEOSGeom_getXMin(g: *const GEOSGeometry, value: *mut c_double) -> c_int;
    #[cfg(feature = "v3_7_0")]
    pub fn GEOSGeom_getYMax(g: *const GEOSGeometry, value: *mut c_double) -> c_int;
    #[cfg(feature = "v3_7_0")]
    pub fn GEOSGeom_getYMin(g: *const GEOSGeometry, value: *mut c_double) -> c_int;
    #[cfg(feature = "v3_6_0")]
    pub fn GEOSMinimumClearance(g: *const GEOSGeometry, d: *mut c_double) -> c_int;
    #[cfg(feature = "v3_6_0")]
    pub fn GEOSMinimumClearanceLine(g: *const GEOSGeometry) -> *mut GEOSGeometry;
    #[cfg(feature = "v3_6_0")]
    pub fn GEOSMinimumRotatedRectangle(g: *const GEOSGeometry) -> *mut GEOSGeometry;
    #[cfg(feature = "v3_6_0")]
    pub fn GEOSMinimumWidth(g: *const GEOSGeometry) -> *mut GEOSGeometry;
    pub fn GEOSOrientationIndex(
        ax: c_double,
        ay: c_double,
        bx: c_double,
        by: c_double,
        px: c_double,
        py: c_double,
    ) -> c_int;
    pub fn GEOSGeom_createEmptyLineString() -> *mut GEOSGeometry;
    pub fn GEOSGeom_createEmptyPoint() -> *mut GEOSGeometry;
    pub fn GEOSGeom_getUserData(g: *const GEOSGeometry) -> *mut c_void;
    pub fn GEOSGeom_setUserData(g: *mut GEOSGeometry, userData: *mut c_void);
    pub fn GEOSSTRtree_create(nodeCapacity: size_t) -> *mut GEOSSTRtree;
    pub fn GEOSSTRtree_insert(
        tree: *mut GEOSSTRtree,
        g: *const GEOSGeometry,
        item: *mut c_void,
    );
    pub fn GEOSSTRtree_query(
        tree: *mut GEOSSTRtree,
        g: *const GEOSGeometry,
        callback: GEOSQueryCallback,
        userdata: *mut c_void,
    );
    pub fn GEOSSTRtree_nearest(
        tree: *mut GEOSSTRtree,
        g: *const GEOSGeometry,
    ) -> *const GEOSGeometry;
    pub fn GEOSSTRtree_nearest_generic(
        tree: *mut GEOSSTRtree,
        item: *const c_void,
        itemEnvelope: *const GEOSGeometry,
        distancefn: GEOSDistanceCallback,
        userdata: *mut c_void,
    ) -> *const c_void;
    pub fn GEOSSTRtree_iterate(
        tree: *mut GEOSSTRtree,
        callback: GEOSQueryCallback,
        userdata: *mut c_void,
    );
    pub fn GEOSSTRtree_remove(
        tree: *mut GEOSSTRtree,
        g: *const GEOSGeometry,
        item: *mut c_void,
    ) -> c_char;
    pub fn GEOSSTRtree_destroy(tree: *mut GEOSSTRtree);
    pub fn GEOS_getWKBOutputDims() -> c_int;
    pub fn GEOS_setWKBOutputDims(newDims: c_int) -> c_int;
    pub fn GEOS_getWKBByteOrder() -> c_int;
    pub fn GEOS_setWKBByteOrder(byteOrder: c_int) -> c_int;
    pub fn GEOSGetGeometryN(g: *const GEOSGeometry, n: c_int) -> *const GEOSGeometry;
    pub fn GEOSInterpolate(g: *const GEOSGeometry, d: c_double) -> *mut GEOSGeometry;
    pub fn GEOSInterpolateNormalized(g: *const GEOSGeometry, d: c_double) -> *mut GEOSGeometry;
    pub fn GEOSProjectNormalized(g: *const GEOSGeometry, p: *const GEOSGeometry) -> c_double;
    pub fn GEOSNode(g: *const GEOSGeometry) -> *mut GEOSGeometry;
    pub fn GEOSOffsetCurve(
        g: *const GEOSGeometry,
        width: c_double,
        quadsegs: c_int,
        joinStyle: c_int,
        mitreLimit: c_double,
    ) -> *mut GEOSGeometry;
    pub fn GEOSPointOnSurface(g: *const GEOSGeometry) -> *mut GEOSGeometry;
    pub fn GEOSPolygonize(geoms: *const *const GEOSGeometry, ngeoms: c_uint) -> *mut GEOSGeometry;
    pub fn GEOSPolygonize_full(
        input: *const GEOSGeometry,
        cuts: *mut *mut GEOSGeometry,
        dangles: *mut *mut GEOSGeometry,
        invalidRings: *mut *mut GEOSGeometry,
    ) -> *mut GEOSGeometry;
    pub fn GEOSPolygonizer_getCutEdges(
        geoms: *const *const GEOSGeometry,
        ngeoms: c_uint,
    ) -> *mut GEOSGeometry;
    pub fn GEOSProject(g: *const GEOSGeometry, p: *const GEOSGeometry) -> c_double;
    pub fn GEOSRelatePattern(
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        pat: *const c_char,
    ) -> c_char;
    pub fn GEOSRelate(g1: *const GEOSGeometry, g2: *const GEOSGeometry) -> *mut c_char;
    pub fn GEOSRelatePatternMatch(mat: *const c_char, pat: *const c_char) -> c_char;
    pub fn GEOSRelateBoundaryNodeRule(
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        bnr: c_int,
    ) -> *mut c_char;
    pub fn GEOSSharedPaths(g1: *const GEOSGeometry, g2: *const GEOSGeometry) -> *mut GEOSGeometry;
    pub fn GEOSWKBReader_create() -> *mut GEOSWKBReader;
    pub fn GEOSWKBReader_destroy(reader: *mut GEOSWKBReader);
    pub fn GEOSWKBReader_read(
        reader: *mut GEOSWKBReader,
        wkb: *const c_uchar,
        size: size_t,
    ) -> *mut GEOSGeometry;
    pub fn GEOSWKBReader_readHEX(
        reader: *mut GEOSWKBReader,
        hex: *const c_uchar,
        size: size_t,
    ) -> *mut GEOSGeometry;
    pub fn GEOSWKBWriter_create() -> *mut GEOSWKBWriter;
    pub fn GEOSWKBWriter_destroy(reader: *mut GEOSWKBWriter);
    pub fn GEOSWKBWriter_write(
        writer: *mut GEOSWKBWriter,
        g: *const GEOSGeometry,
        size: *mut size_t,
    ) -> *mut c_uchar;
    pub fn GEOSWKBWriter_writeHEX(
        writer: *mut GEOSWKBWriter,
        g: *const GEOSGeometry,
        size: *mut size_t,
    ) -> *mut c_uchar;
    pub fn GEOSWKBWriter_getOutputDimension(writer: *const GEOSWKBWriter) -> c_int;
    pub fn GEOSWKBWriter_setOutputDimension(
        writer: *mut GEOSWKBWriter,
        newDimension: c_int,
    );
    pub fn GEOSWKBWriter_getByteOrder(writer: *const GEOSWKBWriter) -> c_int;
    pub fn GEOSWKBWriter_setByteOrder(
        writer: *mut GEOSWKBWriter,
        byteOrder: c_int,
    );
    pub fn GEOSWKBWriter_getIncludeSRID(writer: *const GEOSWKBWriter) -> c_char;
    pub fn GEOSWKBWriter_setIncludeSRID(
        writer: *mut GEOSWKBWriter,
        writeSRID: c_char,
    );
    pub fn GEOSisValidDetail(
        g: *const GEOSGeometry,
        flags: c_int,
        reason: *mut *mut c_char,
        location: *mut *mut GEOSGeometry,
    ) -> c_char;
    pub fn GEOS_interruptCancel();
    pub fn GEOS_interruptRequest();
    pub fn GEOS_interruptRegisterCallback(
        cb: *mut GEOSInterruptCallback,
    ) -> *mut GEOSInterruptCallback;
